# OptimizationTask2

./: README.md  interior_point_algorithm.py  main.py  pyproject.toml  requirements.txt  simplex_method.py
